cmake_minimum_required(VERSION 3.14)

project(test LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(Qt5 COMPONENTS Test REQUIRED)

enable_testing()

set(LIBRARY_PATH "${CMAKE_BINARY_DIR}/libs" CACHE STRING "Path where the libraries are deployed")
set(IMPORTS_PATH "${CMAKE_BINARY_DIR}/imports" CACHE STRING "Path where the plugins are deployed")

include_directories(thirdparty)

add_subdirectory(thirdparty/jsonrpc)
add_subdirectory(thirdparty/nlohmann)
add_subdirectory(thirdparty/wamp)
add_subdirectory(thirdparty/qtpromise)
add_subdirectory(thirdparty/objectlink)
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/api" )
    add_subdirectory(testbed2/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/lib" )
    add_subdirectory(testbed2/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/plugin" )
    add_subdirectory(testbed2/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/http" )
    add_subdirectory(testbed2/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/wamp" )
    add_subdirectory(testbed2/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed2/olink" )
    add_subdirectory(testbed2/olink)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/api" )
    add_subdirectory(tb_enum/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/lib" )
    add_subdirectory(tb_enum/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/plugin" )
    add_subdirectory(tb_enum/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/http" )
    add_subdirectory(tb_enum/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/wamp" )
    add_subdirectory(tb_enum/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_enum/olink" )
    add_subdirectory(tb_enum/olink)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/api" )
    add_subdirectory(tb_same1/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/lib" )
    add_subdirectory(tb_same1/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/plugin" )
    add_subdirectory(tb_same1/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/http" )
    add_subdirectory(tb_same1/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/wamp" )
    add_subdirectory(tb_same1/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same1/olink" )
    add_subdirectory(tb_same1/olink)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/api" )
    add_subdirectory(tb_same2/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/lib" )
    add_subdirectory(tb_same2/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/plugin" )
    add_subdirectory(tb_same2/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/http" )
    add_subdirectory(tb_same2/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/wamp" )
    add_subdirectory(tb_same2/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_same2/olink" )
    add_subdirectory(tb_same2/olink)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/api" )
    add_subdirectory(tb_simple/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/lib" )
    add_subdirectory(tb_simple/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/plugin" )
    add_subdirectory(tb_simple/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/http" )
    add_subdirectory(tb_simple/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/wamp" )
    add_subdirectory(tb_simple/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tb_simple/olink" )
    add_subdirectory(tb_simple/olink)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/api" )
    add_subdirectory(testbed1/api)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/lib" )
    add_subdirectory(testbed1/lib)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/plugin" )
    add_subdirectory(testbed1/plugin)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/http" )
    add_subdirectory(testbed1/http)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/wamp" )
    add_subdirectory(testbed1/wamp)
ENDIF()
IF( IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/testbed1/olink" )
    add_subdirectory(testbed1/olink)
ENDIF()

